--- a/style.css
+++ b/style.css
@@ -58,3 +58,37 @@ a {
     color: white;
     padding-left: 2%;
 }
+
+.sobre {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.title-sobre {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+}
+
+.description-sobre {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: row wrap;
+    width: 80%;
+}
+
+.description-sobre img {
+    max-height: 100%;
+}
+
+.description-text {
+    display: flex;
+    flex-flow: row wrap;
+    width: 50%;
+}
